Updated landing page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,27 @@
         <div class="header">
             <h1>Aman</h1>
             <h1>Khalid</h1>
+            <span id="line"></span>
+            <h2 id="subtitle">CS Student @ Umich</h2>
         </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script>
+            var subtitles = ["Violinist", "Lover of Coffee", "CS Student @ Umich"];
+            var index = 0;
+            var subtitle = document.getElementById("subtitle");
+
+            setInterval(change, 3000);
+
+            function change() {
+                $(subtitle).fadeOut('fast', function() {
+                    $(subtitle).text(subtitles[index++]);
+                    if (index >= subtitles.length) {
+                        index = 0;
+                    }
+
+                    $(subtitle).fadeIn('fast');
+                });
+            }
+        </script>
     </body>
 </html>
