Started potpourri, projects sections

--- a/index.html
+++ b/index.html
@@ -35,17 +35,49 @@
         </div>  
         <div class="section" id="projects">
             <h3 class="section-title">Projects & Prior Experiences</h3>
+            <div class="card-columns">
+                <div class="card border-light">
+                    <div class="card-body">
+                        <h4 class="card-title">Airborne</h4>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/amanasifkhalid/Airborne" target="_blank" class="btn btn-outline-light" role="button">VIEW ON GITHUB</a>
+                    </div>
+                </div>
+                <div class="card border-light">
+                    <div class="card-body">
+                        <h4 class="card-title">ManufacturingNet</h4>
+                        <p>
+                            During my internship at the Mechanical and AI Lab at
+                            Carnegie Mellon University, 
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/BaratiLab/ManufacturingNet" target="_blank" class="btn btn-outline-light" role="button">VIEW PROJECT REPO</a>
+                        <a href="https://github.com/amanasifkhalid/ManufacturingNet-Website" target="_blank" class="btn btn-outline-light" role="button">VIEW WEBSITE REPO</a>
+                    </div>
+                </div>
+                <div class="card border-light">
+                    <div class="card-body">
+                        <h4 class="card-title">...this website</h4>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/amanasifkhalid/amanasifkhalid.github.io" target="_blank" class="btn btn-outline-light" role="button">VIEW ON GITHUB</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="section" id="other">
             <h3 class="section-title">Potpourri</h3>
+            <p>Interested in my playing? Check out a sample <a id="videoLink" href="https://drive.google.com/file/d/1qhIJjsgu-nlrk9FQFh0c8sRemv1bFWM5/view?usp=sharing" target="_blank">here</a>.</p>
         </div>
         <div class="section" id="contact">
             <h3 class="section-title">Contact<sub>and maybe hire</sub> Me</h3>
-            <p>Email: <a id="emailLink" href="mailto:aakhalid@umich.edu">aakhalid@umich.edu</a></p>
-            <p>LinkedIn: <a id="linkedinLink" href="http://linkedin.com/in/aman-khalid">linkedin.com/in/aman-khalid</a></p>
-            <p>GitHub: <a id="githubLink" href="http://github.com/amanasifkhalid">github.com/amanasifkhalid</a></p>
-            <p><span class="line"></span></p>
-            <p><a href="khalid_resume.pdf" target="_blank" class="btn btn-outline-light" role="button">VIEW MY RESUME</a></p>
+            <h5>Email: <a id="emailLink" href="mailto:aakhalid@umich.edu">aakhalid@umich.edu</a></h5>
+            <h5>LinkedIn: <a id="linkedinLink" href="http://linkedin.com/in/aman-khalid" target="_blank">linkedin.com/in/aman-khalid</a></h5>
+            <h5>GitHub: <a id="githubLink" href="http://github.com/amanasifkhalid" target="_blank">github.com/amanasifkhalid</a></h5>
+            <h5><span class="line"></span></h5>
+            <h5><a href="khalid_resume.pdf" target="_blank" class="btn btn-outline-light" role="button">VIEW MY RESUME</a></h5>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script>
