Fixed section spacing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Aman</h1>
             <h1>Khalid</h1>
             <span class="line"></span>
-            <h2 id="subtitle">CS Student @ Umich</h2>
+            <h2 id="subtitle">CS Student @ UMich</h2>
         </div>
         <div class="section" id="about">
             <h3 class="section-title">Pleased to meet you.</h3>
@@ -40,9 +40,12 @@
                 <div class="card border-light">
                     <div class="card-body">
                         <h4 class="card-title">Airborne</h4>
+                        <p>
+                            Coming soon&trade;.
+                        </p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://github.com/amanasifkhalid/Airborne" target="_blank" class="btn btn-outline-light" role="button">VIEW ON GITHUB</a>
+                        <a href="https://github.com/amanasifkhalid/Airborne" target="_blank" class="btn btn-outline-light disabled" role="button">VIEW ON GITHUB</a>
                     </div>
                 </div>
                 <div class="card border-light">
@@ -50,7 +53,13 @@
                         <h4 class="card-title">ManufacturingNet</h4>
                         <p>
                             During my internship at the Mechanical and AI Lab at
-                            Carnegie Mellon University, 
+                            Carnegie Mellon University, I joined the ManufacturingNet
+                            team to build an open-source ML library for manufacturing
+                            professionals.
+                        </p>
+                        <p>
+                            I designed a website, <a href="http://manufacturingnet.io", target="_blank">manufacturingnet.io</a>, to
+                            accompany the project.
                         </p>
                     </div>
                     <div class="card-footer">
@@ -69,6 +78,7 @@
                 </div>
             </div>
         </div>
+        <div class="section"></div>
         <div class="section" id="other">
             <h3 class="section-title">Potpourri</h3>
             <p>Interested in my playing? Check out a sample <a id="videoLink" href="https://drive.google.com/file/d/1qhIJjsgu-nlrk9FQFh0c8sRemv1bFWM5/view?usp=sharing" target="_blank">here</a>.</p>
@@ -83,7 +93,7 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script>
-            var subtitles = ["Violinist", "Linux Cultist", "Hilary Hahn Fanatic", "FOSS Advocate", "Aspiring SWE", "Will Work for Coffee", "CS Student @ Umich"];
+            var subtitles = ["Violinist", "Linux Cultist", "Hilary Hahn Fanatic", "FOSS Advocate", "Aspiring SWE", "Will Work for Coffee", "CS Student @ UMich"];
             var index = 0;
             var subtitle = document.getElementById("subtitle");
 
