Reorganized file structure; added more navs

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h1>Khalid</h1>
             <span class="line"></span>
             <h2 id="subtitle">CS Student @ UMich</h2>
+            <h6 class="nav-down"><a href="#about">&or;</a></h6>
         </div>
         <div class="section" id="about">
             <h3 class="section-title">Pleased to meet you.</h3>
@@ -33,7 +34,8 @@
             <p>
 
             </p>
-        </div>  
+            <h6 class="nav-down"><a href="#projects">&or;</a></h6>
+        </div>
         <div class="section" id="projects">
             <h3 class="section-title">Projects & Prior Experiences</h3>
             <div class="card-columns">
@@ -49,6 +51,9 @@
                     </div>
                 </div>
                 <div class="card border-light">
+                    <a href="http://manufacturingnet.io" target="_blank">
+                        <img src="public/manufacturingnet.png" loading="lazy" class="card-img-top" alt="ManufacturingNet website homepage">
+                    </a>
                     <div class="card-body">
                         <h4 class="card-title">ManufacturingNet</h4>
                         <p>
@@ -58,7 +63,7 @@
                             professionals.
                         </p>
                         <p>
-                            I designed a website, <a href="http://manufacturingnet.io", target="_blank">manufacturingnet.io</a>, to
+                            I designed a website, <a href="http://manufacturingnet.io" target="_blank">manufacturingnet.io</a>, to
                             accompany the project.
                         </p>
                     </div>
@@ -77,11 +82,13 @@
                     </div>
                 </div>
             </div>
+            <h6 class="nav-down"><a href="#other">&or;</a></h6>
         </div>
         <div class="section"></div>
         <div class="section" id="other">
             <h3 class="section-title">Potpourri</h3>
             <p>Interested in my playing? Check out a sample <a id="videoLink" href="https://drive.google.com/file/d/1qhIJjsgu-nlrk9FQFh0c8sRemv1bFWM5/view?usp=sharing" target="_blank">here</a>.</p>
+            <h6 class="nav-down"><a href="#contact">&or;</a></h6>
         </div>
         <div class="section" id="contact">
             <h3 class="section-title">Contact<sub>and maybe hire</sub> Me</h3>
@@ -89,7 +96,8 @@
             <h5>LinkedIn: <a id="linkedinLink" href="http://linkedin.com/in/aman-khalid" target="_blank">linkedin.com/in/aman-khalid</a></h5>
             <h5>GitHub: <a id="githubLink" href="http://github.com/amanasifkhalid" target="_blank">github.com/amanasifkhalid</a></h5>
             <h5><span class="line"></span></h5>
-            <h5><a href="khalid_resume.pdf" target="_blank" class="btn btn-outline-light" role="button">VIEW MY RESUME</a></h5>
+            <h5><a href="public/khalid_resume.pdf" target="_blank" class="btn btn-outline-light" role="button">VIEW MY RESUME</a></h5>
+            <h6 class="nav-down"><a href="#">&and;</a></h6>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script>
